@@ -143,7 +143,15 @@ function smarty_function_html_options_optoutput($key, $value, $selected, $id, $c
         }
         $_html_class = !empty($class) ? ' class="'.$class.' option"' : '';
         $_html_id = !empty($id) ? ' id="'.$id.'-'.$idx.'"' : '';
-        $_html_result .= $_html_class . $_html_id . '>' . smarty_function_escape_special_chars($value) . '</option>' . "\n";
+        if (is_object($value)) {
+            if (method_exists($value, "__toString")) {
+                $value = smarty_function_escape_special_chars((string) $value->__toString());
+            } else {
+                trigger_error("html_options: value is an object of class '". get_class($value) ."' without __toString() method", E_USER_NOTICE);
+                return '';
+            }
+        }
+        $_html_result .= $_html_class . $_html_id . '>' . $value . '</option>' . "\n";
         $idx++;
     } else {
         $_idx = 0;
